--- a/style.css
+++ b/style.css
@@ -200,3 +200,9 @@ body {
     color: #35465d;
     margin: 0 auto;
 }
+
+.kakao{
+        margin-top: 20px;
+    margin: 0 auto;
+        text-align: center;
+}
